# adaptrs

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md  TODO.md
.github/workflows/: ci.yml
examples/: complex_proof.txt  marked_proof.txt  modus_ponens_proof.txt  mp_debug.txt  simple_proof.txt  simple_valid_proof.txt
src/: abnormality.rs  formula.rs  lib.rs  lll.rs  lower_limit_logic.rs  main.rs  parser.rs  proof.rs  strategy.rs  verifier.rs
tests/: examples_test.rs
