[package]
name = "adaptrs"
version = "0.1.0"
edition = "2021"
description = "An adaptive logic proof verifier"
authors = ["Claude"]

[dependencies]
# We're not using any external dependencies for core functionality
# In a real application, you might want to add:
# - clap for CLI argument parsing
# - thiserror for error handling
# - log for logging
# - etc.

[lib]
name = "adaptrs"
path = "src/lib.rs"

[[bin]]
name = "adaptrs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
