[package]
name = "adaptrs"
version = "0.1.0"
edition = "2021"
description = "An adaptive logic proof verifier"
authors = ["Alex Jackson <mail@alexjackson.uk>"]

[dependencies]
nom = "7.1.3"
thiserror = "1.0.56"

[lib]
name = "adaptrs"
path = "src/lib.rs"

[[bin]]
name = "adaptrs"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
